changes to format

--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,21 @@
-font-family: 'Lato', sans-serif;
-font-family: 'Raleway', sans-serif;
+{font-family: 'Lato', sans-serif;}
+{font-family: 'Raleway', sans-serif;}
+.content {display:block;
+  margin-left: auto;
+  margin-right: auto;
+max-width:750px;}
+img{width:400px;
+  height:500px;
+}
+.img-wrapper img{
+  display:block;margin-left: auto;margin-right: auto;text-align:center;
+align-items: center;}
+.header h1{
+  display:block;margin-left: auto;margin-right: auto;text-align:center;}
+  p {font-family: 'Lato', sans-serif; }
+  h1,h3,h4{font-family: 'Raleway', sans-serif;}
+  .caption p{font-size: 13px;
+  margin-top:0;}
+  .border {border:1px solid black;
+  background-color: #F1F1F1;}
+  @media screen and (max-width:600px)
