--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 {font-family: 'Lato', sans-serif;}
+{font-family: 'Murecho', sans-serif;}
 {font-family: 'Raleway', sans-serif;}
 .content {display:block;
   margin-left: auto;
@@ -13,7 +14,7 @@ align-items: center;}
 .header h1{
   display:block;margin-left: auto;margin-right: auto;text-align:center;}
   p {font-family: 'Lato', sans-serif; }
-  h1,h3,h4{font-family: 'Raleway', sans-serif;}
+  h1,h3,h4{font-family: 'Murecho', sans-serif;}
   .caption p{font-size: 13px;
   margin-top:0;}
   .border {border:1px solid black;
