--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,15 @@
       font-family: 'Raleway', sans-serif;
   }
   **/
+  h5{font-size: 17px;}
+  h4{font-size: 19px;}
    .content {
       display:block;
        margin-left: auto;
        margin-right: auto;
        max-width:750px;
   }
-  .color {background-color: #F5F5F5;}
+  .color {background-color:}
   .img-wrapper1 img{
     display:block;
     margin-left: auto;
@@ -43,7 +45,7 @@ height:auto;}
    p {
       font-family: 'Lato', sans-serif;
   }
-   h1,h3,h4{
+   h1,h2,h3,h4,h5{
       font-family: 'Murecho', sans-serif;
   }
   .caption1 p{display:block;
